tests/Core/negative/parsing/test004.jvc
type Unit {
  unit : Unit;
};

def unit := 0;
